--- a/setup.sty
+++ b/setup.sty
@@ -6,7 +6,7 @@
 \usepackage{textcomp}
 \usepackage{tikz}
 \usetikzlibrary{decorations.pathreplacing} % for angle arc
-\usetikzlibrary{angles, quotes, calc, positioning, trees} % for drawing angles
+\usetikzlibrary{angles, quotes, calc, positioning, trees, automata} % for drawing angles
 \usetikzlibrary{arrows.meta, decorations.markings}
 \usepgfplotslibrary{fillbetween}
 \pgfplotsset{compat=1.18,width=10cm}
